Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98289

QTableView : The last column/row is hidden by scrollbar when stylesheet is used.

    XMLWordPrintable

Details

    • macOS
    • 56da533b45e2785e8fd54ef6fcddb7b973c665bf (qt/qtbase/dev) e0f8cad075e0688e7e88d42eefbaa000b2636e2f (qt/qtbase/6.2)

    Description

      On macOS, the last column or row is partially covered by scrollbar when style sheet is applied to the scrollbar.

      On Windows, this looks fine.

      How to reproduce
      Please run qtbug98289-qtableview.zip

      Attachments

        For Gerrit Dashboard: QTBUG-98289
        # Subject Branch Project Status CR V

        Activity

          People

            vhilshei Volker Hilsheimer
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes